# serverless-whisper-base

./: Dockerfile  README.md  app.py  banana_config.json  download.py  pyproject.toml  server.py  util.py
