[tool.poetry]
name = "serverless-whisper-base"
version = "0.1.0"
description = ""
authors = ["Isaak Eriksson <isaak.eriksson@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
whisper = "^1.1.10"
sanic = "^23.3.0"
transformers = "^4.27.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
