[tool.poetry]
name = "serverless-whisper-base"
version = "0.1.0"
description = ""
authors = ["Isaak Eriksson <isaak.eriksson@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
sanic = "^23.3.0"
transformers = "^4.27.3"
faster-whisper = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
